[package]
name = "arweave-rs"
version = "0.1.0"
authors = ["littledivy <dj.srivastava23@gmail.com>"]
edition = "2018"

[dependencies]
aes = { version = "0.6.0" }
sha2 = { version = "0.9.2" }
rsa = { version = "0.3.0" }
pbkdf2 = { version = "0.6.0" }
block-modes = { version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }
base64 = "0.13.0"
num-bigint = "0.3.1"

[dev-dependencies]
tokio-test = "0.4.0"
