[package]
name = "arweave-rs"
version = "0.1.0"
authors = ["littledivy <dj.srivastava23@gmail.com>"]
edition = "2018"

[dependencies]
aes = "0.6.0"
sha2 = "0.9.2"
rsa = "0.3.0"
rand = { version = "0.8.2", features = [ "std_rng" ] }
pbkdf2 = "0.6.0"
block-modes = "0.7.0"
serde_json = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }
base64 = "0.13.0"
num-bigint = "0.3.1"

[dev-dependencies]
tokio-test = "0.4.0"
