[package]
name = "arweave-crypto"
version = "0.1.0"
authors = ["littledivy <dj.srivastava23@gmail.com>"]
edition = "2018"

[dependencies]
aes = "0.6.0"
sha2 = "0.9.2"
hmac = "0.10.1"
rsa = "0.5.0"
rand = "0.8.4"
pbkdf2 = "0.6.0"
block-modes = "0.7.0"
base64 = "0.13.0"
num-bigint = "0.3.1"

[lib]
path = "src/lib.rs"
